--- a/fase1_qcs_simulador/config/quantum_config.yaml
+++ b/fase1_qcs_simulador/config/quantum_config.yaml
@@ -3,22 +3,23 @@
 #
 # Este arquivo define os "instrumentos" de controle clássico e os 
 # "dispositivos quânticos" que eles controlam. É a ponte entre a 
-# API QCS e o hardware (real ou emulado). [cite: 263]
+# [cite_start]API QCS e o hardware (real ou emulado). [cite: 141]
 # =================================================================
 
 # -----------------------------------------------------------------
 # Seção de Instrumentos: Define os controladores clássicos.
 # Drivers que a API QCS irá usar
 # No seu caso, são nomes lógicos que sua FPGA irá representar.
-# Em um sistema real, aqui estariam os módulos PXIe da Keysight. [cite: 264]
+# Em um sistema real, aqui estariam os módulos PXIe da Keysight.
 # -----------------------------------------------------------------
 instruments:
-  control_awg: #Representa o Gerador de Forma de Onda Arbitrária (AWG) responsável pelos pulsos de controle do qubit
-  #Em um sistema real seria um M5300A PXIe RF AWG ou um M3202A PXIe AWG
+  # Representa o Gerador de Forma de Onda Arbitrária (AWG) responsável pelos pulsos de controle do qubit
+  # Em um sistema real seria um M5300A PXIe RF AWG ou um M3202A PXIe AWG
+  control_awg:
     type: AWG
     channels:
-      - ch0_I #Controle vetorial do pulso (x)
-      - ch0_Q #Controle vetorial do pulso (y)
+      - ch0_I # Controle vetorial do pulso (x)
+      - ch0_Q # Controle vetorial do pulso (y)
       - ch1_marker
   
   # Um AWG dedicado para gerar o pulso que excita o ressoador de leitura
@@ -29,14 +30,14 @@ instruments:
       - ch_marker
 
   # Fonte de tensão/corrente DC para aplicar um bias estático no qubit e assim sintonizar sua frequência
-  #Em um sistema real seria um M9615A PXIe SMU
+  # Em um sistema real seria um M9615A PXIe SMU
   dc_source:
     type: DCSource
     channels:
       - ch_z_bias
 
   # Representa o hardware que adquire o sinal de resposta do ressoador
-  #Em um sistema real seria um M5200A PXIe Digitizer ou M3102A PXIe Digitizer.
+  # Em um sistema real seria um M5200A PXIe Digitizer ou M3102A PXIe Digitizer.
   digitizer:
     type: Digitizer
     channels:
@@ -49,7 +50,7 @@ instruments:
 quantum_devices:
   # Define um ressoador de leitura
   rr0: # Canal de excitação do ressoador. Quando enviar um pulso de leitura, deverá usar este canal.
-    [cite_start]type: ReadoutResonator [cite: 273]
+    type: ReadoutResonator # [cite: 156]
     channels:
       drive: readout_awg.ch_drive
       acquisition: digitizer.ch_acquisition # Canal de aquisição
@@ -58,7 +59,7 @@ quantum_devices:
       readout_amplitude: 0.2   # V
       integration_time: 2.0E-6 # s
 
-  # Define um qubit sintonizável (Tunable Qubit) [cite: 271]
+  # [cite_start]Define um qubit sintonizável (Tunable Qubit) [cite: 154]
   q0:
     type: TunableQubit
     channels:
@@ -74,8 +75,8 @@ quantum_devices:
     
     # Parâmetros de calibração podem ser armazenados aqui
     parameters:
-      frequency: 4.505E9          # Frequência do qubit em Hz
-      pi_pulse_amplitude: 0.512   # Amplitude para um pulso Pi (180°)
+      frequency: 4.505E9           # Frequência do qubit em Hz
+      pi_pulse_amplitude: 0.512    # Amplitude para um pulso Pi (180°)
       pi_half_pulse_amplitude: 0.256 # Amplitude para um pulso Pi/2 (90°)
-      t1: 25.0E-6                 # Tempo T1 em segundos (valor de exemplo)
-      t2_ramsey: 18.0E-6          # Tempo T2 de Ramsey em segundos (valor de exemplo)
+      t1: 25.0E-6                  # Tempo T1 em segundos (valor de exemplo)
+      t2_ramsey: 18.0E-6           # Tempo T2 de Ramsey em segundos (valor de exemplo)
